syntax = "proto3";
package user_occupation;

option go_package = "nfxid/protos/gen/directory/user_occupation;useroccupationpb";

import "google/protobuf/timestamp.proto";

// 用户职业信息
message UserOccupation {
  string id = 1;                           // 职业ID (UUID)
  string user_id = 2;                      // 用户ID (UUID)
  string company = 3;                      // 公司 (varchar(255))
  string position = 4;                     // 职位 (varchar(255))
  optional string department = 5;          // 部门 (varchar(255))
  optional string industry = 6;            // 行业 (varchar(100))
  optional string location = 7;            // 位置 (varchar(255))
  optional string employment_type = 8;     // 雇佣类型 (varchar(50))
  optional google.protobuf.Timestamp start_date = 9; // 开始日期 (date)
  optional google.protobuf.Timestamp end_date = 10;  // 结束日期 (date)
  bool is_current = 11;                    // 是否当前职位
  optional string description = 12;        // 描述 (text)
  optional string responsibilities = 13;   // 职责 (text)
  optional string achievements = 14;       // 成就 (text)
  repeated string skills_used = 15;        // 使用的技能 (text[])
  google.protobuf.Timestamp created_at = 16;        // 创建时间
  google.protobuf.Timestamp updated_at = 17;        // 更新时间
  optional google.protobuf.Timestamp deleted_at = 18; // 软删除时间
}

// UserOccupation 服务 - 供其他服务通过 gRPC 管理用户职业
service UserOccupationService {
  // 根据ID获取用户职业
  rpc GetUserOccupationByID (GetUserOccupationByIDRequest) returns (GetUserOccupationByIDResponse);
  
  // 根据用户ID获取用户职业列表
  rpc GetUserOccupationsByUserID (GetUserOccupationsByUserIDRequest) returns (GetUserOccupationsByUserIDResponse);
}

// UserOccupation Service Messages
message GetUserOccupationByIDRequest {
  string id = 1;
}

message GetUserOccupationByIDResponse {
  UserOccupation user_occupation = 1;
}

message GetUserOccupationsByUserIDRequest {
  string user_id = 1;
  optional bool is_current = 2;
}

message GetUserOccupationsByUserIDResponse {
  repeated UserOccupation user_occupations = 1;
}
